# datagrid-gtk3

./: .gitignore  .landscape.yaml  .travis.yml  AUTHORS.rst  DESCRIPTION.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  extra_requirements.txt  requirements.txt  setup.cfg  setup.py  test_requirements.txt
datagrid-gtk2/: main.py
datagrid-gtk2/db/: sqlite.py
datagrid-gtk2/tests/: __init__.py  test_datagrid-gtk2.py
datagrid-gtk2/ui/: grid.py  uifile.py
datagrid_gtk2/: main.py
datagrid_gtk2/data/: LICENSE.txt
datagrid_gtk2/db/: __init__.py  sqlite.py
datagrid_gtk2/tests/: data.py  test_datagrid-gtk2.py
datagrid_gtk2/ui/: __init__.py  grid.py  popupcal.py
datagrid_gtk3/: __init__.py  main.py
datagrid_gtk3/data/: README
datagrid_gtk3/db/: __init__.py  sqlite.py
datagrid_gtk3/tests/: data.py  test_datagrid-gtk3.py  test_externals.py  test_sqlite.py
datagrid_gtk3/tests/ui/: test_popupcal.py
datagrid_gtk3/tests/utils/: __init__.py  test_dateutils.py  test_stringutils.py  test_transformations.py
datagrid_gtk3/ui/: __init__.py  grid.py  popupcal.py  uifile.py
datagrid_gtk3/ui/glade/: datagrid.glade  popupcal.glade
datagrid_gtk3/utils/: __init__.py  dateutils.py  imageutils.py  stringutils.py  transformations.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  screenshots.rst  usage.rst
example_data/: README.txt  chinook.sqlite
examples/chinook/: LICENSE.md  chinook.py  chinook.sqlite
examples/filebrowser/: README.txt  filebrowser.py  filebrowser_db.py
examples/selectable/: selectable.py  selectable.sqlite
(+1 files in other folders)
