[wheel]
universal = 1

[nosetests]
with-coverage=1
cover-package=datagrid_gtk3
cover-erase=1
cover-xml=1
cover-xml-file=coverage.xml
cover-inclusive=1
with-xunit=1
# NOTES ON ADDITIONAL OPTIONS:
#   --cover-html when run interactively to view HTML coverage output
#   --with-specplugin to view nicely human-readable RSpec output; you won't see
#     coverage info in stdout if you do this

[metadata]
description-file = DESCRIPTION.rst
